styles.css
body {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    color: #404040;
    margin: 0;
    text-align: center;
}

.margin-bottom {
    margin-bottom: 0.5rem;
}

/* typography */

h1 {
    color: #fff;
    font-weight: 300;
    font-size: 2.25rem;
    margin: 2em 0;
}


/* 
// this is the combinator, where it indicates that specific p tag comes right after h1, takes this style
h1 + p {
    color: red;
}
// this is tilde, where it indicates that every p tag comes after h1 is taking this style
h1 ~ P {
    color: pink
}

*/


h2, h3, .main-header {
    color: #F18119;
}

h2, h3, button, .main-header {
    text-transform: uppercase;
}

h2 {
    font-size: 1.25rem;
    margin-bottom: 0;
}
strong {
    font-weight: 900;
}

input {
    text-align: center;
}

.main-header {
    letter-spacing: 2px;
}

.main-subcontent {
    margin: 0;
}

.aside-header {
    text-transform: none;
    color: #404040;
}

.aside-subheader {
    margin: 0;
}

.aside-form-legal {
    font-size: 0.625rem;
    letter-spacing: 1px;
    margin-bottom: 0;
}

/* layout */

.main-bbq {
    padding: 0 .5em 2em;
    background-color: #404040;
    background-image: url(../images/ribs.jpg);
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
}

.main-header {
    order: -2;
}

/* .main-content {
    max-width: 19rem;
} */

/* .main-subcontent {
    
} */

.aside-bbq {
    padding: 1rem;
}

.aside-form {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    max-width: 15rem;
    margin: 0 auto;
    justify-content: space-between;
    /* background-color: pink; */
    margin-bottom: 1rem;
}

input, button {
    border-radius: 5px;
    height: 1.6rem;
}

input {
    border: 1px solid #404040;
}

/* 
1. gradient
2. position of the header always on top
3. style the input 
4. give gradient to button
5. position sub-header in the main in different positon
*/


/* media queries*/

@media (min-width:550px) {
    body {
        font-size: 1.125rem;
        display: flex;
        height: 100vh;
    }
    h1 {
        font-size: 3.5rem;
    }
    h2 {
        font-size: 1.75rem;
        line-height: 1em;
    }
    .aside-form-legal {
        font-size: 0.8rem;
    }
    .main-bbq {
        width: 60%;
        /* align-items: center;
        justify-content: center; */
    }
    .aside-bbq {
        width: 40%;
        /* align-items: center;
        justify-content: center; */
    }
}

